install(FILES
    b5.glf
    b6.glf
    b7.glf
    DejaVuLGCSans.ttf
    digital.glf
    droid-sans-bold.glf
    droid-sans-normal.glf
    fragile.glf
    jura-normal.glf
    liberation-sans-bold.glf
    liberation-sans-normal.glf
    VeraMono.ttf
    Vera.ttf
    DESTINATION ${datadir}/data/fonts
)

add_subdirectory(5by7)
add_subdirectory(ArmataHL)
add_subdirectory(Montserrant)
add_subdirectory(vera)
